# netcore-cpp

./: .gitignore  CMakeLists.txt  Program.cs  README.md  app.csproj  app.sln  build.Dockerfile  helloworld.cpp  run.Dockerfile
scripts/: build.sh  run.sh
